All base functions work

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,12 +11,8 @@
 </head>
 <body>
 <header class="zull"></header>
-<nav>
-    <ul>
-        <li><a href="index.html">Sales</a></li>
-        <li><a href="export.html">Export</a></li>
-    </ul>
-</nav>
+<!--<div id="nv"></div>-->
+<!--<script src="./js/nv_script.js"></script>-->
 <div id="app"></div>
 <script src="./js/sale_script.js"></script>
 </body>
