Implemented Filter by Name in vue. No new bugs spotted

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,9 +11,8 @@
 </head>
 <body>
 <header class="zull"></header>
-<!--<div id="nv"></div>-->
-<!--<script src="./js/nv_script.js"></script>-->
-<div id="app"></div>
+<div id="app">
+</div>
 <script src="./js/sale_script.js"></script>
 </body>
 </html>
