--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,9 +10,23 @@
     <link rel="stylesheet" href="./styles/main_style.css"/>
 </head>
 <body>
-<header class="zull"></header>
+<header class="heading"></header>
 <div id="app">
 </div>
 <script src="./js/sale_script.js"></script>
+<script>
+    window.onscroll = function() {myFunction()};
+
+    var navbar = document.getElementById("navbar");
+    var sticky = navbar.offsetTop;
+
+    function myFunction() {
+        if (window.pageYOffset >= sticky) {
+            navbar.classList.add("sticky")
+        } else {
+            navbar.classList.remove("sticky");
+        }
+    }
+</script>
 </body>
 </html>
