Added DB migration and favicon

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Base page</title>
+    <title>Faze Way</title>
     <!-- Vue + Vue resource -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.5.1"></script>
-    <!--  Custom style  -->
     <link rel="stylesheet" href="./styles/main_style.css"/>
+    <link rel="icon" href="favicon/favicon.ico" type="image/x-icon" />
 </head>
 <body>
 <header class="heading"></header>
-<div sytle="margin: 0;padding: 0" id="app">
+<div id="app">
 </div>
 <script src="./js/sale_script.js"></script>
 <script>
